--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget11/tables-widget11.component.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="col-auto">
-        <button class="card-label fw-bolder fs-6 mb-1 btn btn-sm btn-primary btn-icon"
+        <button class="card-label fw-bolder fs-6 mb-1 btn btn-sm btn-primary btn-icon" style="width: 70px;"
           (click)="getCreditDetailsMonthWise()">View </button>
       </div>
     </div>
