--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget15/tables-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget15/tables-widget15.component.html
@@ -19,7 +19,7 @@
                                         fw-bolder
                                         px-4
                                         me-1
-                                      " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_15_tab_1')" 
+                                      " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_15_tab_1')" style="margin-left: 900px;"
                                             (click)="exportexcel()">
                                             CSV
                                         </a>
