--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget1/trans-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget1/trans-tables-widget1.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="accessGroup == 2 ||accessGroup == 16 ">
+<div class="container-fluid" *ngIf="accessGroup == 2 ">
   <div class="row">
     <div class="col-12">
       <div class="card">
