--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
@@ -11,10 +11,10 @@
               </h4>
 
               <div class="text-center mb-4" *ngIf="isAlert" style="position: absolute; top: 14%; left: 50%; 
-                          transform: translate(-50%, -50%);">
+                          transform: translate(-50%, -50%);">                                       
                 <div class="row justify-content-center">
                   <div class="col-xl-10" style="color: red">
-                    <i class="fa fa-exclamation-triangle fa-fw fa-6x"></i>
+                    <i class="fa fa-exclamation-triangle fa-fw fa-6x" style="color: red"></i>
                   </div>
                 </div>
               </div>
@@ -109,7 +109,7 @@
           <ng-template awWizardStepSymbol>
             <i class="fas fa-user-circle"></i>
           </ng-template>
-          <form *ngIf="isForm2" [formGroup]="corporateMappingForm1">
+          <form *ngIf="isForm2" [formGroup]="corporateMappingForm">
             <div class="row">
               <div class="col-12">
                 <div class="row mb-3">
