--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
@@ -121,7 +121,7 @@
             <div class="col-lg-10">
                 <form [formGroup]="filterForm">
                     <div class="row">
-                        <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+                        <label for="example-text-input" style="margin-top: -10px;" class="col-auto col-form-label">Date Range </label>
                         <div class="col-lg-2">
                             <input class="form-control" placeholder="DD-MM-YYYY" readonly
                                 style="background-color: #ffffff;" name="startDate" ngbTooltip="Start Date"
