--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget13/feeds-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget13/feeds-widget13.component.html
@@ -1,3 +1,38 @@
+<style>
+    .form-control {
+        width: 130px;
+        line-height: 2.0;
+        color: #0d0e0e;
+        ;
+
+    }
+
+    .form-select {
+        width: 130px;
+        line-height: 2.0;
+        color: #0d0e0e;
+        ;
+
+    }
+
+    .table-responsive {
+        padding: 1.25rem 0.25rem;
+    }
+
+    .fa-times:before {
+        font-size: large;
+    }
+
+    .fa-plus:before {
+        font-size: large;
+    }
+
+    .table>tbody {
+        vertical-align: inherit;
+        color: black;
+    }
+</style>
+
 <div *ngIf="accessGroup !='19'" class="container-fluid">
     <div class="row">
         <div class="col-12">
