--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
@@ -1,9 +1,10 @@
+<br>
 <form [formGroup]="filterForm">
   <div class="row">
     <div class="col-auto">
-      <!-- <input class="form-control mr-sm-2" type="text" placeholder="search"
+      <input class="form-control mr-sm-2" type="text" placeholder="search"
         oninput="let p=this.selectionStart;this.setSelectionRange(p, p);" [formControl]="searchCustName"
-        aria-label="Search"> -->
+        aria-label="Search">
     </div>
     <div class="col-auto">
       <label for="example-text-input" class="col-auto col-form-label">Date Range :</label>
