--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -91,9 +91,11 @@
                   <br>
                   <div class="row">
                     <div class="col-md-2"></div>
-                    <div class="col-md-8">
+                    <div class="col-md-3">
                       <button class="btn btn-success" type="button" (click)="addFuelPrice()">Submit</button>
-                      &nbsp;&nbsp;
+                    </div>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <div class="col-md-4">
                       <button class="btn btn-secondary" type="button" (click)="d('Cross click')">Cancel</button>
                     </div>
                   </div>
@@ -190,11 +192,11 @@
 
               <div class="text-md-right float-md-end pagination-rounded">
 
-            <!-- begin::Pagination -->
-            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
-                style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
-            </pagination-controls>
-            <!-- end::Pagination -->
+                <!-- begin::Pagination -->
+                <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
+                  style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
+                </pagination-controls>
+                <!-- end::Pagination -->
               </div>
 
             </div>
