--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
@@ -16,7 +16,7 @@
   <div id="page-wrap">
     <div class="row noprint">
       <div class="col-auto">
-        &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- <div class="col-md-1">
