--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -265,7 +265,7 @@
             </div> -->
               <div class="col-md-1">
                 <!-- <button printSectionId="sanjay" ngxPrint>print</button>  -->
-                &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+                &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
                     class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
               </div>
             </div>
